[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/item_todo/item_todo.gd" type="Script" id=1]
[ext_resource path="res://global/fonts/nunito/static/Nunito-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxEmpty" id=8]
content_margin_left = 20.0

[sub_resource type="DynamicFont" id=9]
size = 29
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 20
border_width_right = 20
border_color = Color( 0.8, 0.8, 0.8, 0 )
border_blend = true

[node name="ItemToDo" type="Panel"]
margin_right = 680.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
mouse_filter = 1
script = ExtResource( 1 )

[node name="CompleteToDo" type="CheckBox" parent="."]
anchor_bottom = 1.0
margin_right = 122.0
mouse_filter = 1
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/hover_pressed = SubResource( 8 )
custom_styles/normal = SubResource( 8 )

[node name="PressItemButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 131.0
mouse_filter = 1

[node name="InfoAboutToDo" type="Label" parent="PressItemButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_right = -20.0
margin_bottom = -43.0
text = "Задача 1"
valign = 1
clip_text = true

[node name="InfoAboutTime" type="Label" parent="PressItemButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 51.0
margin_right = -20.0
custom_fonts/font = SubResource( 9 )
text = "20.07.2022"
valign = 1
clip_text = true

[node name="Done" type="Panel" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 5.0
mouse_filter = 2
custom_styles/panel = SubResource( 10 )

[connection signal="toggled" from="CompleteToDo" to="." method="_on_complete_todo_toggled"]
[connection signal="pressed" from="PressItemButton" to="." method="_on_PressItemButton_pressed"]
